--- a/admin/modules/branch-offices/view/branch-office.html
+++ b/admin/modules/branch-offices/view/branch-office.html
@@ -8,20 +8,22 @@
     <link rel="stylesheet" href="../../../../../assets/css/index.css">
     <link rel="stylesheet" href="../../../../../assets/css/index-admin.css">
     <link rel="stylesheet" href="../../../../../assets/css/modal.css">
+    <link rel="shortcut icon" href="/assets/img/restaurant/logo-el-zarape.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/7348c59eb0.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <title>Admin | Sucursales</title>
 </head>
 
 <body>
+    <div class="min-vh-100 mb-5">
     <header class="d-flex flex-wrap justify-content-around">
         <div class="container-logo d-flex align-items-center justify-content-center"><a href="#"><img class="logo"
                     src="../../../../assets/img/restaurant/logo-el-zarape.png" alt="Logotipo El zarape"></a></div>
         <div class="container-navigation d-flex ">
             <ul class="navegation d-flex align-items-center">
-                <li class="navegation__item"><a class="navegation__link" href="#"><i
-                            class="navegation__icon fa-regular fa-user"></i></a></li>
+                <li class="navegation__item"><a class="navegation__link" href="/admin/panel.html"><i class="navegation__icon fa-solid fa-house"></i></a></li>
                 </li>
-                <li class="navegation__item"><a class="navegation__link" href="#"><i
+                <li class="navegation__item"><a class="navegation__link" href="/pages/login.html"><i
                             class="navegation__icon fa-solid fa-right-from-bracket"></i></a></li>
                 </li>
             </ul>
@@ -31,6 +33,15 @@
         <h1 class="content__element title display-2 text-center">Sucursales</h1>
         <div class="content__element container-button container-fluid d-flex justify-content-center">
             <button id="btn-create" class="button-create style-text">Crear nuevo registro</button>
+            <button class="button-action style-text search-button" data-bs-toggle="modal" onclick="toggleSearchFields()">
+                <i class="fa-solid fa-search"></i> </button>
+        </div>
+        <div class="search-container">
+            <div id="search-fields" style="display: none;">
+               <div class="mb-3">
+               <label for="search-branch-offices" class="form-label">Sucursal:</label>
+               <input type="text" class="form-control" id="search-branch-offices" oninput="searchBranchOffices()">
+            </div>
         </div>
         <div class="content__element container-fluid">
             <div class="container-table table-responsive">
@@ -53,7 +64,24 @@
             </div>
         </div>
     </main>
-
+</div>
+<footer>
+    <div class="footer-content">
+        <p class="footer-title">Restaurante</p>
+        <p class="highlight">El Zarape</p>
+        <nav class="d-flex flex-wrap footer-nav footer-nav-top">
+            <a href="#">Sucursal</a>
+            <a href="#">Sobre Nosotros</a>
+            <a href="#">Descargar App</a>
+        </nav>
+        <nav class="footer-nav footer-nav-bottom">
+            <a href="#">Información legal</a>
+            <span class="separator"></span>
+            <a href="#">Política de Privacidad</a>
+        </nav>
+        <p class="footer-copyright">Copyright ©2024 El Zarape. Diseñado por Deep Code</p>
+    </div>
+</footer>
     <!-- Modal CRUD to manage the components -->
     <!--Modal to create new register-->
     <div class="modal fade modal-lg modal-dialog-scrollable" id="modal-form" aria-hidden="true"
