--- a/admin/modules/drinks/view/drink.html
+++ b/admin/modules/drinks/view/drink.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,52 +8,81 @@
     <link rel="stylesheet" href="../../../../../assets/css/index.css">
     <link rel="stylesheet" href="../../../../../assets/css/index-admin.css">
     <link rel="stylesheet" href="../../../../../assets/css/modal.css">
+    <link rel="shortcut icon" href="/assets/img/restaurant/logo-el-zarape.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/7348c59eb0.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Admin | Bebidas</title>
 </head>
 
 <body>
-    <header class="d-flex flex-wrap justify-content-around">
-        <div class="container-logo  d-flex align-items-center justify-content-center"><a href="#"><img class="logo"
-                    src="../../../../assets/img/restaurant/logo-el-zarape.png" alt="Logotipo El zarape"></a></div>
-        <div class="container-navigation d-flex ">
-            <ul class="navegation d-flex align-items-center">
-                <li class="navegation__item"><a class="navegation__link" href="#"><i
-                            class="navegation__icon fa-regular fa-user"></i></a></li>
-                </li>
-                <li class="navegation__item"><a class="navegation__link" href="#"><i
-                            class="navegation__icon fa-solid fa-right-from-bracket"></i></a></li>
-                </li>
-            </ul>
-        </div>
-    </header>
-    <main class="content container">
-        <h1 class="content__element title display-2 text-center">Bebidas</h1>
-        <div class="content__element container-button container-fluid d-flex justify-content-center">
-            <button class="button-create style-text" data-bs-target="#modal-create" data-bs-toggle="modal">Crear nuevo
-                registro</button>
-        </div>
-        <div class="content__element container-fluid">
-            <div class="container-table table-responsive">
-                <table class="table table-hover">
-                    <thead class="table-head">
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Nombre</th>
-                            <th scope="col">Descripción</th>
-                            <th scope="col">Categoria</th>
-                            <th scope="col">Precio</th>
-                            <th scope="col">Foto</th>
-                            <th scope="col">Estatus</th>
-                        </tr>
-                    </thead>
-                    <tbody id="table-bebida">
-                    </tbody>
-                </table>
-
+    <div class="min-vh-100 mb-5">
+        <header class="d-flex flex-wrap justify-content-around">
+            <div class="container-logo  d-flex align-items-center justify-content-center"><a href="#"><img class="logo"
+                        src="../../../../assets/img/restaurant/logo-el-zarape.png" alt="Logotipo El zarape"></a></div>
+            <div class="container-navigation d-flex ">
+                <ul class="navegation d-flex align-items-center">
+                    <li class="navegation__item"><a class="navegation__link" href="/admin/panel.html"><i class="navegation__icon fa-solid fa-house"></i></a></li>
+                    <li class="navegation__item"><a class="navegation__link" href="/pages/login.html"><i
+                                class="navegation__icon fa-solid fa-right-from-bracket"></i></a></li>
+                    </li>
+                </ul>
             </div>
+        </header>
+        <main class="content container">
+            <h1 class="content__element title display-2 text-center">Bebidas</h1>
+            <div class="content__element container-button container-fluid d-flex justify-content-center">
+                <button class="button-create style-text" data-bs-target="#modal-create" data-bs-toggle="modal">Crear
+                    nuevo
+                    registro</button>
+                <button class="button-action style-text search-button" data-bs-toggle="modal"
+                    onclick="toggleSearchFields()">
+                    <i class="fa-solid fa-search"></i> </button>
+            </div>
+            <div class="search-container">
+                <div id="search-fields" style="display: none;">
+                    <div class="mb-3">
+                        <label for="search-drinks" class="form-label">Bebidas:</label>
+                        <input type="text" class="form-control" id="search-drinks" oninput="searchDrinks()">
+                    </div>
+                </div>
+            </div>
+            <div class="content__element container-fluid">
+                <div class="container-table table-responsive">
+                    <table class="table table-hover">
+                        <thead class="table-head">
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Nombre</th>
+                                <th scope="col">Descripción</th>
+                                <th scope="col">Categoria</th>
+                                <th scope="col">Precio</th>
+                                <th scope="col">Foto</th>
+                                <th scope="col">Estatus</th>
+                            </tr>
+                        </thead>
+                        <tbody id="table-bebida">
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </main>
+    </div>
+    <footer>
+        <div class="footer-content">
+            <p class="footer-title">Restaurante</p>
+            <p class="highlight">El Zarape</p>
+            <nav class="d-flex flex-wrap footer-nav footer-nav-top">
+                <a href="#">Sucursal</a>
+                <a href="#">Sobre Nosotros</a>
+                <a href="#">Descargar App</a>
+            </nav>
+            <nav class="footer-nav footer-nav-bottom">
+                <a href="#">Información legal</a>
+                <span class="separator"></span>
+                <a href="#">Política de Privacidad</a>
+            </nav>
+            <p class="footer-copyright">Copyright ©2024 El Zarape. Diseñado por Deep Code</p>
         </div>
-    </main>
+    </footer>
 
     <!-- Modal CRUD to manage the components -->
     <!--Modal to create new register-->
@@ -77,11 +105,12 @@
                         </div>
                         <div class="mb-3">
                             <label class="form-label" for="category-drink">Categoria</label>
-                            <select class="form-select form-select-sm p-2 select-categories" id="category-drink" required></select>
+                            <select class="form-select form-select-sm p-2 select-categories" id="category-drink"
+                                required></select>
                         </div>
                         <div class="mb-3">
                             <label for="price-drink" class="col-form-label">Precio</label>
-                            <input type="number" class="form-control" id="price-drink" required>
+                            <input type="number" step="0.01" min="0" class="form-control" id="price-drink" required>
                         </div>
                         <div class="mb-3">
                             <label for="image-drink" class="col-form-label">Imagen</label>
@@ -93,7 +122,8 @@
                     <button type="button" class="modal-footer__button btn-cancel" data-bs-dismiss="modal"
                         aria-label="Close">Cancelar</button>
                     <button type="button" id="btn-clean-create" class="modal-footer__button btn-clean">Limpiar</button>
-                    <button type="button" id="btn-preview-create" class="modal-footer__button btn-agree">Registrar</button>
+                    <button type="button" id="btn-preview-create"
+                        class="modal-footer__button btn-agree">Registrar</button>
                 </div>
             </div>
         </div>
@@ -148,15 +178,17 @@
                         </div>
                         <div class="mb-3">
                             <label class="form-label" for="category-drink-update">Categoria</label>
-                            <select class="form-select form-select-sm p-2 select-categories" id="category-drink-update" required></select>
+                            <select class="form-select form-select-sm p-2 select-categories" id="category-drink-update"
+                                required></select>
                         </div>
                         <div class="mb-3">
                             <label for="price-drink-update" class="col-form-label">Precio</label>
-                            <input type="number" class="form-control" id="price-drink-update" required>
+                            <input type="number" step="0.01" min="0" max="100" class="form-control"
+                                id="price-drink-update" required>
                         </div>
                         <div class="mb-3">
-                            <label for="image-drink-update"  class="col-form-label">Imagen</label>
-                            <input type="file" class="form-control" id="image-drink-update" accept="image/*" >
+                            <label for="image-drink-update" class="col-form-label">Imagen</label>
+                            <input type="file" class="form-control" id="image-drink-update" accept="image/*">
                             <p id="p-current-image"></p>
                         </div>
                         <div class="mb-3">
@@ -169,9 +201,11 @@
                 <div class="modal-footer d-flex justify-content-evenly flex-wrap-reverse">
                     <button type="button" class="modal-footer__button btn-cancel" data-bs-dismiss="modal"
                         aria-label="Close">Cancelar</button>
-                    <button type="button" id="btn-preview-delete" class="modal-footer__button btn-delete">Eliminar</button>
+                    <button type="button" id="btn-preview-delete"
+                        class="modal-footer__button btn-delete">Eliminar</button>
                     <button type="button" id="btn-clean-update" class="modal-footer__button btn-clean">Limpiar</button>
-                    <button type="button" id="btn-preview-update" class="modal-footer__button btn-modify">Modificar</button>
+                    <button type="button" id="btn-preview-update"
+                        class="modal-footer__button btn-modify">Modificar</button>
                 </div>
             </div>
         </div>
@@ -197,8 +231,8 @@
                 <div class="modal-footer d-flex justify-content-center flex-column ">
                     <p>¿Desea realizar la acción?</p>
                     <div class="footer-buttons">
-                        <button id="btn-update" class="modal-footer__button btn-agree" data-bs-target="#modal-preview-update"
-                            data-bs-toggle="modal">Sí</button>
+                        <button id="btn-update" class="modal-footer__button btn-agree"
+                            data-bs-target="#modal-preview-update" data-bs-toggle="modal">Sí</button>
                         <button class="modal-footer__button btn-delete" data-bs-target="#modal-update"
                             data-bs-toggle="modal">No</button>
                     </div>
@@ -225,8 +259,8 @@
                 <div class="modal-footer d-flex justify-content-center flex-column ">
                     <p>¿Desea realizar la acción?</p>
                     <div class="footer-buttons">
-                        <button id="btn-delete" class="modal-footer__button btn-agree" data-bs-target="#modal-preview-delete"
-                        data-bs-toggle="modal">Sí</button>
+                        <button id="btn-delete" class="modal-footer__button btn-agree"
+                            data-bs-target="#modal-preview-delete" data-bs-toggle="modal">Sí</button>
                         <button class="modal-footer__button btn-delete" data-bs-target="#modal-update"
                             data-bs-toggle="modal">No</button>
                     </div>
@@ -234,11 +268,11 @@
             </div>
         </div>
     </div>
-    
-    
+
+
     <!--JS Bootstrap-->
     <script src="../../../../assets/js/bootstrap.min.js"></script>
-    <script src="../controller/bebidas.js"></script>
+    <script src="../controller/drink.js"></script>
     <!--JS Ajax-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
