--- a/admin/modules/foods/view/food.html
+++ b/admin/modules/foods/view/food.html
@@ -8,21 +8,20 @@
     <link rel="stylesheet" href="../../../../../assets/css/index.css">
     <link rel="stylesheet" href="../../../../../assets/css/index-admin.css">
     <link rel="stylesheet" href="../../../../../assets/css/modal.css">
+    <link rel="shortcut icon" href="/assets/img/restaurant/logo-el-zarape.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/7348c59eb0.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Admin | Alimentos</title>
 </head>
-
 <body>
-    <div class="min-vh-100">
+    <div class="min-vh-100 mb-5">
     <header class="d-flex flex-wrap justify-content-around">
         <div class="container-logo d-flex align-items-center justify-content-center"><a href="#"><img class="logo"
                     src="../../../../assets/img/restaurant/logo-el-zarape.png" alt="Logotipo El zarape"></a></div>
         <div class="container-navigation d-flex ">
             <ul class="navegation d-flex align-items-center">
-                <li class="navegation__item"><a class="navegation__link" href="#"><i
-                            class="navegation__icon fa-regular fa-user"></i></a></li>
+                <li class="navegation__item"><a class="navegation__link" href="/admin/panel.html"><i class="navegation__icon fa-solid fa-house"></i></a></li>
                 </li>
-                <li class="navegation__item"><a class="navegation__link" href="#"><i
+                <li class="navegation__item"><a class="navegation__link" href="/pages/login.html"><i
                             class="navegation__icon fa-solid fa-right-from-bracket"></i></a></li>
                 </li>
             </ul>
@@ -33,6 +32,16 @@
         <div class="content__element container-button container-fluid d-flex justify-content-center">
             <button class="button-create style-text" data-bs-target="#modal-create" data-bs-toggle="modal">Crear nuevo
                 registro</button>
+                <button class="button-action style-text search-button" data-bs-toggle="modal" onclick="toggleSearchFields()">
+                    <i class="fa-solid fa-search"></i> </button>
+                </div>
+                <div class="search-container">
+                    <div id="search-fields" style="display: none;">
+                <div class="mb-3">
+                    <label for="search-food" class="form-label">Alimentos:</label>
+                    <input type="text" class="form-control" id="search-food" oninput="searchFood()">
+                </div>
+                    </div>
         </div>
         <div class="content__element container-fluid">
             <div class="container-table table-responsive">
@@ -100,7 +109,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="price-food" class="col-form-label">Precio</label>
-                            <input type="number" class="form-control" id="price-food" required>
+                            <input type="number" step="0.01" min="0" class="form-control" id="price-food" required>
                         </div>
                         <div class="mb-3">
                             <label for="image-food" class="col-form-label">Imagen</label>
@@ -126,7 +135,7 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header d-flex justify-content-center">
-                    <h1 class="modal-title fs-5" id="exampleModalToggleLabel">Vista previa</h1>
+                    <h1 class="modal-title fs-5 title" id="exampleModalToggleLabel">Vista previa</h1>
                 </div>
                 <div class="modal-body">
                     <div class="container-fuid d-flex flex-wrap justify-content-evenly">
@@ -175,7 +184,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="price-food-update" class="col-form-label">Precio</label>
-                            <input type="number" class="form-control" id="price-food-update" required>
+                            <input type="number" step="0.01" min="0" max="100"class="form-control" id="price-food-update" required >
                         </div>
                         <div class="mb-3">
                             <label for="image-food-update" class="col-form-label">Imagen</label>
@@ -209,7 +218,7 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header d-flex justify-content-center">
-                    <h1 class="modal-title fs-5" id="exampleModalToggleLabel">Vista previa</h1>
+                    <h1 class="modal-title fs-5 title" id="exampleModalToggleLabel">Vista previa</h1>
                 </div>
                 <div class="modal-body">
                     <div class="container-fuid d-flex flex-wrap justify-content-evenly">
@@ -240,7 +249,7 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header d-flex justify-content-center">
-                    <h1 class="modal-title fs-5" id="exampleModalToggleLabel">Vista previa</h1>
+                    <h1 class="modal-title fs-5 title" id="exampleModalToggleLabel">Vista previa</h1>
                 </div>
                 <div class="modal-body">
                     <div class="container-fuid d-flex flex-wrap justify-content-evenly align-items-center gap-4">
@@ -257,7 +266,6 @@
                             data-bs-target="#modal-preview-delete" data-bs-toggle="modal">Sí</button>
                         <button class="modal-footer__button btn-delete" data-bs-target="#modal-update"
                             data-bs-toggle="modal">No</button>
-
                     </div>
                 </div>
             </div>
@@ -267,7 +275,7 @@
 
     <!--JS Bootstrap-->
     <script src="../../../../assets/js/bootstrap.min.js"></script>
-    <script src="../controller/alimentos.js"></script>
+    <script src="../controller/food.js"></script>
     <!--JS Ajax-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
