--- a/assets/css/index-admin.css
+++ b/assets/css/index-admin.css
@@ -28,6 +28,27 @@
     outline: 2px solid #33A000 !important;
 }
 
+.button-action {
+    font-weight: 500;
+    letter-spacing: 1px;
+    background-color: #1163dd;
+    border-radius: 12px;
+    padding: 3px 7px;
+    padding-bottom: 6px;
+    border: none;
+}
+
+.button-action:hover {
+    color: #1163dd;
+    background-color: #fff;
+    outline: 2px solid #1163dd !important;
+    transition: background 0.4s;
+}
+
+.button-action:active {
+    outline: 2px solid #1163dd !important;
+}
+
 
 /*Header*/
 header {
