--- a/admin/modules/combos/view/combo.html
+++ b/admin/modules/combos/view/combo.html
@@ -138,7 +138,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="combo-price" class="col-form-label">Precio:</label>
-                            <input type="number" class="form-control" id="combo-price" required>
+                            <input type="number" step="0.01" min="0" class="form-control" id="combo-price" required>
                         </div>
                         <div class="mb-3">
                             <label for="combo-image" class="col-form-label">Imagen:</label>
@@ -219,7 +219,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="update-combo-price" class="col-form-label">Precio:</label>
-                            <input type="number" class="form-control" id="update-combo-price" required>
+                            <input type="number" step="0.01" min="0" class="form-control" id="update-combo-price" required>
                         </div>
                         <div class="mb-3">
                             <label for="update-combo-image" class="col-form-label">Imagen del Combo:</label>
